Equal comparison and method fix